--- a/_6_ML_NLP.ipynb
+++ b/_6_ML_NLP.ipynb
@@ -1444,8 +1444,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Variations on calculating TF**\n",
+    "\n",
+    "- Binary: 1 if word appears, 0 otherwise\n",
+    "- Normalize the count (sometimes this is the default)\n",
+    "\n",
+    "$$tf(t, d) = \\cfrac{count(t, d)}{\\sum\\limits_{t' \\in terms(d)} count(t', d)}$$\n",
+    "\n",
+    "- Take the log (reduces the influence of extreme values)\n",
+    "\n",
+    "$$tf(t, d) = log(1 + count(t, d))$$\n",
+    "\n",
+    "**Variations on calculating IDF**\n",
+    "\n",
+    "- Trivial IDF: we just set IDF to 1, in which case TF-IDF = TF (aka bag-of-words)\n",
+    "\n",
+    "- Smooth IDF: prevents us from ever getting a value of 0\n",
+    "\n",
+    "$$idf(t) = log \\cfrac{N}{N(t) + 1} + 1$$\n",
+    "\n",
+    "- IDF Max: use max frequency of term\n",
+    "\n",
+    "$$idf(t) = log \\cfrac{max _{t' \\in terms(d)} N(t')}{N(t)}$$\n",
+    "\n",
+    "- Probabilistic IDF: gives us log-odds (logits)\n",
+    "\n",
+    "$$idf(t) = log \\cfrac{N - N(t)}{N(t)}$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1565,6 +1597,7 @@
    "source": [
     "\"\"\"\n",
     "Calculate TF-IDF by hand\n",
+    "v1\n",
     "\"\"\"\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -1619,135 +1652,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TF-IDF matrix:\n",
-      "[[0.         0.46979139 0.58028582 0.38408524 0.         0.\n",
-      "  0.38408524 0.         0.38408524]\n",
-      " [0.         0.6876236  0.         0.28108867 0.         0.53864762\n",
-      "  0.28108867 0.         0.28108867]\n",
-      " [0.51184851 0.         0.         0.26710379 0.51184851 0.\n",
-      "  0.26710379 0.51184851 0.26710379]\n",
-      " [0.         0.46979139 0.58028582 0.38408524 0.         0.\n",
-      "  0.38408524 0.         0.38408524]]\n",
-      "\n",
-      "Vocabulary:\n",
-      "['and' 'document' 'first' 'is' 'one' 'second' 'the' 'third' 'this']\n"
+      "> Vocabulary: \n",
+      "['girl', 'boy', 'good']\n",
+      "[['good', 'boy'], ['good', 'girl'], ['boy', 'girl', 'good']]\n",
+      "IDF: [0.17609125905568124, 0.17609125905568124, 0.0]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'and': 1.916290731874155,\n",
-       " 'document': 1.2231435513142097,\n",
-       " 'first': 1.5108256237659907,\n",
-       " 'is': 1.0,\n",
-       " 'one': 1.916290731874155,\n",
-       " 'second': 1.916290731874155,\n",
-       " 'the': 1.0,\n",
-       " 'third': 1.916290731874155,\n",
-       " 'this': 1.0}"
+       "array([[0.        , 0.08804563, 0.        ],\n",
+       "       [0.08804563, 0.        , 0.        ],\n",
+       "       [0.05869709, 0.05869709, 0.        ]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Calculate TF-IDF by hand\n",
+    "v2\n",
+    "\"\"\"\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "\n",
+    "sentences = [\n",
+    "    'good boy',\n",
+    "    'good girl',\n",
+    "    'boy girl good'\n",
+    "]\n",
+    "\n",
+    "### Construct a vocabulary\n",
+    "vocabulary = list(set( ' '.join(sentences).split(' ') ))\n",
+    "print(f\"> Vocabulary: \\n{vocabulary}\")\n",
+    "\n",
+    "sentences_vector = [i.split(' ') for i in sentences]\n",
+    "print(sentences_vector)\n",
+    "\n",
+    "# Let's learn IDF from the vectorised sentences\n",
+    "def fit_idf(documents, vocabulary):\n",
+    "    IDF = []\n",
+    "    for word_vocab in vocabulary:\n",
+    "        doc_with_token = len([i for i in documents if word_vocab in i])\n",
+    "        IDF_token = math.log(len(documents) / doc_with_token, 10)\n",
+    "        IDF.append(IDF_token)\n",
+    "    return IDF\n",
+    "\n",
+    "idf = fit_idf(sentences_vector, vocabulary)\n",
+    "print(f\"IDF: {idf}\")\n",
+    "\n",
+    "# Now let's calculate TF-IDF for the same sentences\n",
+    "def calculate_tf(documents: list[list], vocabulary: list) -> list:\n",
+    "    TF = []\n",
+    "    for document in documents:\n",
+    "        token_counts = {word_vocab: document.count(word_vocab) for word_vocab in vocabulary}\n",
+    "        TF_for_one_document = []\n",
+    "        for word_vocab in vocabulary:\n",
+    "            TF_vocab = token_counts[word_vocab] / len(document)\n",
+    "            TF_for_one_document.append(TF_vocab)\n",
+    "        TF.append(TF_for_one_document)\n",
+    "    return TF\n",
+    "# calculate_tf(sentences_vector, vocabulary)\n",
+    "\n",
+    "def calculate_tf_idf(documents, learned_idf, vocabulary):\n",
+    "    tf = calculate_tf(documents, vocabulary)\n",
+    "    tf_idf = np.array(tf) * np.array(idf)\n",
+    "    return tf_idf\n",
+    "\n",
+    "tf_idf = calculate_tf_idf(sentences_vector, idf, vocabulary)\n",
+    "tf_idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "TF-IDF matrix: \n",
+      "[[0.52338122 0.52338122 0.33406745 0.41263976 0.41263976]\n",
+      " [0.         0.         1.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.49681612 0.61366674 0.61366674]]\n",
+      "Vocabulary:\n",
+      "['buenos' 'dias oscar' 'document' 'first' 'first document']\n",
+      "Word-to-index mapping:\n",
+      "{'first': np.int64(3), 'document': np.int64(2), 'buenos': np.int64(0), 'first document': np.int64(4), 'dias oscar': np.int64(1)}\n",
+      "\n",
+      "TF-IDF matrix:\n",
+      "[[0.52338122 0.52338122 0.33406745 0.41263976 0.41263976]\n",
+      " [0.         0.         1.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.49681612 0.61366674 0.61366674]]\n",
+      "\n",
+      "Vocabulary:\n",
+      "['buenos' 'dias oscar' 'document' 'first' 'first document']\n",
+      "\n",
+      "Test:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "\n",
     "\n",
     "# Sample corpus (collection of documents)\n",
-    "corpus = [\n",
-    "    'This is the first document.',\n",
+    "train_corpus = [\n",
+    "    'This is the first document. Buenos días, Óscar',\n",
     "    'This document is the second document.',\n",
     "    'And this is the third one.',\n",
     "    'Is this the first document?',\n",
     "]\n",
     "\n",
-    "# Create an instance of TfidfVectorizer\n",
-    "vectorizer = TfidfVectorizer()\n",
-    "\n",
-    "# Fit the vectorizer to the corpus and transform the corpus into a TF-IDF matrix\n",
-    "tfidf_matrix = vectorizer.fit_transform(corpus)\n",
-    "\n",
-    "# Get the list of unique words (vocabulary)\n",
-    "vocab = vectorizer.get_feature_names_out()\n",
-    "\n",
-    "# Convert the TF-IDF matrix to a dense numpy array for easier manipulation\n",
-    "tfidf_matrix_dense = tfidf_matrix.toarray()\n",
-    "\n",
-    "# Print the TF-IDF matrix and the corresponding vocabulary\n",
-    "print(\"TF-IDF matrix:\")\n",
-    "print(tfidf_matrix_dense)\n",
-    "print(\"\\nVocabulary:\")\n",
-    "print(vocab)\n",
-    "\n",
-    "idf = vectorizer.idf_\n",
-    "dict(zip(vectorizer.get_feature_names_out(), idf))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TF-IDF matrix:\n",
-      "[[0.42520648 0.5252146  0.34763416 0.42520648 0.34763416 0.34763416]\n",
-      " [0.75564616 0.         0.30889513 0.37782308 0.30889513 0.30889513]\n",
-      " [0.         0.         0.47160997 0.57684669 0.47160997 0.47160997]\n",
-      " [0.46979139 0.58028582 0.38408524 0.         0.38408524 0.38408524]]\n",
-      "\n",
-      "Vocabulary:\n",
-      "['document' 'first' 'is' 'is the' 'the' 'this']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'document': 1.2231435513142097,\n",
-       " 'first': 1.5108256237659907,\n",
-       " 'is': 1.0,\n",
-       " 'is the': 1.2231435513142097,\n",
-       " 'the': 1.0,\n",
-       " 'this': 1.0}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "# Sample corpus (collection of documents)\n",
-    "corpus = [\n",
-    "    'This is the first document.',\n",
-    "    'This document is the second document.',\n",
-    "    'And this is the third one.',\n",
-    "    'Is this the first document?',\n",
+    "test_corpus = [\n",
+    "    'This is the test corpus',\n",
+    "    'Consisting of several sentences'\n",
     "]\n",
     "\n",
     "# Create an instance of TfidfVectorizer\n",
     "vectorizer = TfidfVectorizer(\n",
-    "    ngram_range=(1,2),\n",
-    "    # when building the vocabulary, ignore terms that have a document frequency strictly lower than the given threshold\n",
-    "    min_df=2,\n",
-    "    max_features=6\n",
+    "    strip_accents = 'unicode',\n",
+    "    lowercase = True,\n",
+    "    stop_words = stopwords.words('english'),\n",
+    "    ngram_range = (1, 2),\n",
+    "    max_df = 1.0,\n",
+    "    min_df = 1,\n",
+    "    max_features = 5\n",
     ")\n",
     "\n",
     "# Fit the vectorizer to the corpus and transform the corpus into a TF-IDF matrix\n",
-    "tfidf_matrix = vectorizer.fit_transform(corpus)\n",
+    "tfidf_matrix = vectorizer.fit_transform(train_corpus)\n",
     "\n",
     "# Get the list of unique words (vocabulary)\n",
     "vocab = vectorizer.get_feature_names_out()\n",
@@ -1756,33 +1819,28 @@
     "tfidf_matrix_dense = tfidf_matrix.toarray()\n",
     "\n",
     "# Print the TF-IDF matrix and the corresponding vocabulary\n",
+    "print(f\"\"\"\n",
+    "TF-IDF matrix: \n",
+    "{tfidf_matrix_dense}\n",
+    "Vocabulary:\n",
+    "{vocab}\n",
+    "Word-to-index mapping:\n",
+    "{vectorizer.vocabulary_}\n",
+    "\"\"\")\n",
     "print(\"TF-IDF matrix:\")\n",
     "print(tfidf_matrix_dense)\n",
     "print(\"\\nVocabulary:\")\n",
     "print(vocab)\n",
+    "print()\n",
     "\n",
     "idf = vectorizer.idf_\n",
-    "dict(zip(vectorizer.get_feature_names_out(), idf))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'this': 5, 'is': 2, 'the': 4, 'first': 1, 'document': 0, 'is the': 3}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vectorizer.vocabulary_"
+    "dict(zip(vectorizer.get_feature_names_out(), idf))\n",
+    "\n",
+    "# Having learned an TF-IDF vectoriser, you can transform some sentences\n",
+    "Xtest = vectorizer.transform(test_corpus)\n",
+    "\n",
+    "print(\"Test:\")\n",
+    "Xtest.toarray()"
    ]
   },
   {
