--- a/_6_ML_NLP.ipynb
+++ b/_6_ML_NLP.ipynb
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1138,6 +1138,7 @@
       " [0 2 0 1 0 1 1 0 1]\n",
       " [1 0 0 1 1 0 1 1 1]\n",
       " [0 1 1 1 0 0 1 0 1]]\n",
+      "<class 'numpy.ndarray'> (4, 9)\n",
       "\n",
       "Vectorised test sentences:\n",
       "[[0 1 0 1 0 0 1 0 1]\n",
@@ -1173,7 +1174,7 @@
     "print(vocab)\n",
     "print(\"\\nBag of Words matrix (vectorised corpus):\")\n",
     "print(bow_matrix_dense)\n",
-    "\n",
+    "print(type(bow_matrix_dense), bow_matrix_dense.shape)\n",
     "### Then you can transform another list of documents like this:\n",
     "Xtest = vectorizer.transform(list_of_docs)\n",
     "print(f\"\\nVectorised test sentences:\\n{Xtest.toarray()}\")"
@@ -1476,8 +1477,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### By hand"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Versions:\n",
+    "- M1: Functional programming with Numpy vectors\n",
+    "  - M1a: mostly uses lists, uses Numpy array for final TF*IDF multiplication\n",
+    "  - M1b: written a bit differently\n",
+    "  - M1c: mostly uses Numpy arrays instead of lists\n",
+    "- M2: OOP\n",
+    "\n",
+    "Final versions:\n",
+    "- Functional: M1c"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1485,11 +1508,11 @@
      "output_type": "stream",
      "text": [
       "> Vocabulary: \n",
-      "['good', 'boy', 'girl']\n",
+      "['good', 'girl', 'boy']\n",
       "\n",
       "> TF: \n",
-      "[[0.5        0.5        0.        ]\n",
-      " [0.5        0.         0.5       ]\n",
+      "[[0.5        0.         0.5       ]\n",
+      " [0.5        0.5        0.        ]\n",
       " [0.33333333 0.33333333 0.33333333]]\n"
      ]
     },
@@ -1515,8 +1538,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>good</th>\n",
-       "      <th>boy</th>\n",
        "      <th>girl</th>\n",
+       "      <th>boy</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>index</th>\n",
@@ -1529,14 +1552,14 @@
        "    <tr>\n",
        "      <th>Sentence 1</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sentence 2</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sentence 3</th>\n",
@@ -1549,11 +1572,11 @@
        "</div>"
       ],
       "text/plain": [
-       "            good  boy  girl\n",
+       "            good  girl  boy\n",
        "index                      \n",
-       "Sentence 1   0.5  0.5   0.0\n",
-       "Sentence 2   0.5  0.0   0.5\n",
-       "Sentence 3   0.3  0.3   0.3"
+       "Sentence 1   0.5   0.0  0.5\n",
+       "Sentence 2   0.5   0.5  0.0\n",
+       "Sentence 3   0.3   0.3  0.3"
       ]
      },
      "metadata": {},
@@ -1585,8 +1608,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.        , 0.08804563, 0.        ],\n",
-       "       [0.        , 0.        , 0.08804563],\n",
+       "array([[0.        , 0.        , 0.08804563],\n",
+       "       [0.        , 0.08804563, 0.        ],\n",
        "       [0.        , 0.05869709, 0.05869709]])"
       ]
      },
@@ -1596,8 +1619,8 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Calculate TF-IDF by hand\n",
-    "v1\n",
+    "TF-IDF by hand\n",
+    "M1a\n",
     "\"\"\"\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -1652,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1660,28 +1683,28 @@
      "output_type": "stream",
      "text": [
       "> Vocabulary: \n",
-      "['girl', 'boy', 'good']\n",
+      "['good', 'girl', 'boy']\n",
       "[['good', 'boy'], ['good', 'girl'], ['boy', 'girl', 'good']]\n",
-      "IDF: [0.17609125905568124, 0.17609125905568124, 0.0]\n"
+      "IDF: [0.0, 0.17609125905568124, 0.17609125905568124]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.        , 0.08804563, 0.        ],\n",
-       "       [0.08804563, 0.        , 0.        ],\n",
-       "       [0.05869709, 0.05869709, 0.        ]])"
+       "array([[0.        , 0.        , 0.08804563],\n",
+       "       [0.        , 0.08804563, 0.        ],\n",
+       "       [0.        , 0.05869709, 0.05869709]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Calculate TF-IDF by hand\n",
-    "v2\n",
+    "TF-IDF by hand\n",
+    "M1b\n",
     "\"\"\"\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -1732,6 +1755,162 @@
     "\n",
     "tf_idf = calculate_tf_idf(sentences_vector, idf, vocabulary)\n",
     "tf_idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Vocabulary: \n",
+      "['boy', 'girl', 'good']\n",
+      "\n",
+      "Vectorised sentences: \n",
+      "[['good', 'boy'], ['good', 'girl'], ['boy', 'girl', 'good']]\n",
+      "\n",
+      "IDF: \n",
+      "[0.17609126 0.17609126 0.        ]\n",
+      "shape (3,)\n",
+      "\n",
+      "TF-IDF:\n",
+      "[[0.08804563 0.         0.        ]\n",
+      " [0.         0.08804563 0.        ]\n",
+      " [0.05869709 0.05869709 0.        ]]\n",
+      "shape (3, 3)\n",
+      "[0, 1, 0]\n",
+      "\n",
+      "Most important terms:\n",
+      "token: boy , tf-idf score: 0.0880\n",
+      "token: girl , tf-idf score: 0.0880\n",
+      "token: boy , tf-idf score: 0.0587\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "TF-IDF by hand\n",
+    "M1c\n",
+    "\"\"\"\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "\n",
+    "sentences = [\n",
+    "    'good boy',\n",
+    "    'good girl',\n",
+    "    'boy girl good'\n",
+    "]\n",
+    "\n",
+    "# Construct a vocabulary\n",
+    "vocabulary = sorted(\n",
+    "    list(set( ' '.join(sentences).split(' ') ))\n",
+    ")\n",
+    "print(f\"> Vocabulary: \\n{vocabulary}\")\n",
+    "\n",
+    "def text_processing(x: list[str]):\n",
+    "    return [i.split(' ') for i in sentences]\n",
+    "\n",
+    "sentences_vector = text_processing(sentences)\n",
+    "print(f\"\"\"\n",
+    "Vectorised sentences: \n",
+    "{sentences_vector}\"\"\")\n",
+    "\n",
+    "# Let's learn IDF from the vectorised sentences\n",
+    "def fit_idf(documents: list[list], \n",
+    "            vocabulary: list[str]\n",
+    "            ) -> np.array:\n",
+    "    \"\"\"\n",
+    "    Returns learned IDF matrix from a list of documents.\n",
+    "    \"\"\"\n",
+    "    IDF = np.array(\n",
+    "        [\n",
+    "            math.log(\n",
+    "                len(documents) / len([j for j in documents if i in j]),\n",
+    "                10\n",
+    "            ) \n",
+    "            for i in vocabulary\n",
+    "        ]\n",
+    "    )\n",
+    "    return IDF\n",
+    "\n",
+    "idf = fit_idf(sentences_vector, vocabulary)\n",
+    "print(f\"\"\"\n",
+    "IDF: \n",
+    "{idf}\n",
+    "shape {idf.shape}\"\"\")\n",
+    "\n",
+    "def calculate_tf(documents: list[list],\n",
+    "                 vocabulary: list\n",
+    "                 ) -> np.array:\n",
+    "    \"\"\"\n",
+    "    For a list of given sentences, calculate np.array of TF values.\n",
+    "    \"\"\"\n",
+    "    TF = np.array(\n",
+    "        [\n",
+    "            [i.count(j) / len(i) for j in vocabulary] for i in documents\n",
+    "        ]\n",
+    "    )\n",
+    "    return TF\n",
+    "# calculate_tf(sentences_vector, vocabulary)\n",
+    "\n",
+    "def calculate_tf_idf(documents: list[list],\n",
+    "                     learned_idf: np.array,\n",
+    "                     vocabulary: list\n",
+    "                     ) -> np.array:\n",
+    "    \"\"\"\n",
+    "    Calculate TF-IDF.\n",
+    "    \"\"\"\n",
+    "    tf = calculate_tf(documents, vocabulary)\n",
+    "    tf_idf = tf * idf\n",
+    "    return tf_idf\n",
+    "\n",
+    "tf_idf = calculate_tf_idf(sentences_vector,\n",
+    "                          idf,\n",
+    "                          vocabulary\n",
+    "                          )\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "TF-IDF:\n",
+    "{tf_idf}\n",
+    "shape {tf_idf.shape}\"\"\")\n",
+    "\n",
+    "# Get the most important term for each sentence\n",
+    "important_terms_indices = [i.argmax() for i in tf_idf]\n",
+    "print(important_terms_indices)\n",
+    "important_terms_words = [vocabulary[i] for i in important_terms_indices]\n",
+    "important_terms_tf_idf_scores = [tf_idf[i][important_terms_indices[i]] for i in range(len(important_terms_indices))]\n",
+    "print(\"\\nMost important terms:\")\n",
+    "for i, j in zip(important_terms_words, important_terms_tf_idf_scores):\n",
+    "    print(f\"token: {i} , tf-idf score: {j:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 0]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### API"
    ]
   },
   {
@@ -15478,7 +15657,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-ml-cpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -15492,7 +15671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.10"
   },
   "orig_nbformat": 4
  },
