--- a/_6_ML_NLP.ipynb
+++ b/_6_ML_NLP.ipynb
@@ -6834,6 +6834,439 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### ex3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import tarfile \n",
+    "\n",
+    "# file = tarfile.open('GoogleNews-vectors-negative300.bin.gz')\n",
+    "# file.extractall('ignore_these')\n",
+    "# file.close()\n",
+    "\n",
+    "# download weights from here\n",
+    "# https://drive.google.com/file/d/0B7XkCwpI5KDYNlNUTTlSS21pQmM/edit?resourcekey=0-wjGZdNAUop6WykTtMip30g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import KeyedVectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gensim.models.keyedvectors.KeyedVectors at 0x1fc7af1b250>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_vectors = KeyedVectors.load_word2vec_format(\n",
+    "    'GoogleNews-vectors-negative300.bin',\n",
+    "    binary = True\n",
+    ")\n",
+    "word_vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "king - man = queen - woman\n",
+      " > [('queen', 0.7118193507194519), ('monarch', 0.6189674139022827), ('princess', 0.5902431011199951), ('crown_prince', 0.5499460697174072), ('prince', 0.5377321839332581), ('kings', 0.5236844420433044), ('Queen_Consort', 0.5235945582389832), ('queens', 0.518113374710083), ('sultan', 0.5098593235015869), ('monarchy', 0.5087411403656006)]\n",
+      "france - paris = england - london\n",
+      " > [('england', 0.5836853981018066), ('europe', 0.5529575943946838), ('birmingham', 0.5180005431175232), ('european', 0.5125302076339722), ('newcastle', 0.5107192993164062), ('africa', 0.4936657249927521), ('glasgow', 0.49336352944374084), ('barcelona', 0.4907172918319702), ('sheffield', 0.4896310269832611), ('spain', 0.48787444829940796)]\n",
+      "france - paris = italy - rome\n",
+      " > [('italy', 0.519952118396759), ('european', 0.5075845718383789), ('italian', 0.5057743787765503), ('epl', 0.490744411945343), ('spain', 0.4888668656349182), ('england', 0.4852672219276428), ('italians', 0.4842422604560852), ('kosovo', 0.48134922981262207), ('lampard', 0.4807735085487366), ('malta', 0.47885662317276)]\n",
+      "paris - france = lohan - italy\n",
+      " > [('lohan', 0.5069674849510193), ('madrid', 0.481842964887619), ('heidi', 0.4799900949001312), ('real_madrid', 0.4753323495388031), ('florence', 0.4682057499885559), ('diego', 0.46727296710014343), ('ronnie', 0.4672326445579529), ('juventus', 0.4672062397003174), ('joel', 0.4653724133968353), ('huntelaar', 0.46358999609947205)]\n",
+      "japan - japanese = tibet - chinese\n",
+      " > [('tibet', 0.566748321056366), ('america', 0.5380551815032959), ('korea', 0.5365394949913025), ('pakistan', 0.514945387840271), ('iran', 0.5134090781211853), ('thailand', 0.5074805021286011), ('mexico', 0.5068151354789734), ('cuba', 0.5048203468322754), ('ethiopia', 0.5021540522575378), ('seoul', 0.5019758343696594)]\n",
+      "december - november = september - june\n",
+      " > [('september', 0.556007444858551), ('april', 0.5512108206748962), ('july', 0.544388473033905), ('february', 0.5405706167221069), ('october', 0.5089326500892639), ('sept', 0.5014254450798035), ('nov', 0.47300073504447937), ('january', 0.4615103006362915), ('aug', 0.4590410888195038), ('os', 0.45587944984436035)]\n",
+      "miami - florida = dallas - texas\n",
+      " > [('dallas', 0.6192164421081543), ('houston', 0.5943326354026794), ('colorado', 0.5335407853126526), ('jefferson', 0.5273835062980652), ('alexander', 0.5251672863960266), ('austin', 0.5227128267288208), ('crawford', 0.5212564468383789), ('utah', 0.5185266733169556), ('san_antonio', 0.5183972120285034), ('oklahoma', 0.512581467628479)]\n",
+      "einstein - scientist = jude - painter\n",
+      " > [('jude', 0.5432739853858948), ('nikki', 0.5313627123832703), ('teresa', 0.5287428498268127), ('becky', 0.5238639116287231), ('madonna', 0.5139206051826477), ('catherine', 0.5096977949142456), ('johnny_depp', 0.509378969669342), ('herman', 0.5065557956695557), ('Chaim_Soutine', 0.500883936882019), ('Leon_Kossoff', 0.49975815415382385)]\n",
+      "man - woman = he - she\n",
+      " > [('he', 0.8211314678192139), ('She', 0.6126701831817627), ('He', 0.5821656584739685), ('him', 0.5703296065330505), ('her', 0.5565515160560608), ('I', 0.5553656220436096), ('nobody', 0.5361312627792358), ('his', 0.5343848466873169), ('never', 0.5160409808158875), ('somebody', 0.5043624639511108)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_analogies(w1, \n",
+    "                   w2, \n",
+    "                   w3, \n",
+    "                   verbose = True\n",
+    "                   ):\n",
+    "    \"\"\"\n",
+    "    w1 - w2 = ? - w3\n",
+    "    e.g. king - man = ? - woman\n",
+    "    ? = king - man + woman\n",
+    "    \"\"\"\n",
+    "    r = word_vectors.most_similar(\n",
+    "        positive = [w1, w3], \n",
+    "        negative = [w2]\n",
+    "    )\n",
+    "    print(f\"{w1} - {w2} = {r[0][0]} - {w3}\")\n",
+    "    if verbose:\n",
+    "        print(f\" > {r}\")\n",
+    "    return None\n",
+    "\n",
+    "find_analogies('king', 'man', 'woman')\n",
+    "find_analogies('france', 'paris', 'london')\n",
+    "find_analogies('france', 'paris', 'rome')\n",
+    "find_analogies('paris', 'france', 'italy') # poor result for some reason for this one\n",
+    "find_analogies('japan', 'japanese', 'chinese')\n",
+    "find_analogies('december', 'november', 'june', 'september')\n",
+    "find_analogies('miami', 'florida', 'texas')\n",
+    "find_analogies('einstein', 'scientist', 'painter')\n",
+    "find_analogies('man', 'woman', 'she')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "man - woman = uncle - aunt\n",
+      " > [('uncle', 0.7947131395339966), ('cousin', 0.6967297792434692), ('grandmother', 0.6939677596092224), ('nephew', 0.6850400567054749), ('brother', 0.680067777633667), ('grandfather', 0.6738758683204651), ('father', 0.663468062877655), ('stepfather', 0.629887580871582), ('son', 0.6269505023956299), ('grandson', 0.6251413226127625)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_analogies('man', 'woman', 'aunt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "woman - man = mother - aunt\n",
+      " > [('mother', 0.7951834797859192), ('niece', 0.7576830387115479), ('grandmother', 0.7559488415718079), ('daughter', 0.7047942876815796), ('sister', 0.6969187259674072), ('granddaughter', 0.6878492832183838), ('maternal_grandmother', 0.6876276731491089), ('eldest_daughter', 0.6342002749443054), ('paternal_grandmother', 0.6250221133232117), ('aunts', 0.6223127245903015)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_analogies('woman', 'man', 'aunt') # "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "man - woman = son - wife\n",
+      " > [('son', 0.6474398970603943), ('father', 0.6401553750038147), ('brother', 0.6202807426452637), ('fiancee', 0.6180657744407654), ('husband', 0.6130927801132202), ('fiancée', 0.610081672668457), ('nephew', 0.6054068207740784), ('sons', 0.6022451519966125), ('girlfriend', 0.6010324954986572), ('uncle', 0.6002035737037659)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_analogies('man', 'woman', 'wife') # i expect husband; these vectors are not perfect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "man - woman = actor - actress\n",
+      " > [('actor', 0.8202017545700073), ('Actor', 0.6390690207481384), ('funnyman', 0.6047690510749817), ('thespian', 0.5847228169441223), ('thesp', 0.5750558376312256), ('heart_throb', 0.5708590745925903), ('starlet', 0.567270815372467), ('singer', 0.5657444596290588), ('Actress', 0.5615349411964417), ('ADRIEN_BRODY', 0.5556015968322754)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_analogies('man', 'woman', 'actress')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "man - woman = father - mother\n",
+      " > [('father', 0.8097569346427917), ('son', 0.7835153937339783), ('uncle', 0.7502947449684143), ('dad', 0.7315300703048706), ('brother', 0.7288522124290466), ('stepfather', 0.7226430177688599), ('nephew', 0.7075803279876709), ('grandmother', 0.7054316997528076), ('aunt', 0.6887602210044861), ('younger_brother', 0.6820830702781677)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_analogies('man', 'woman', 'mother')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nephew - niece = uncle - aunt\n",
+      " > [('uncle', 0.8662505149841309), ('brother', 0.7746226787567139), ('father', 0.7582035064697266), ('cousin', 0.743397057056427), ('son', 0.7250553965568542), ('younger_brother', 0.7006060481071472), ('grandfather', 0.6930109858512878), ('grandson', 0.6908376216888428), ('stepfather', 0.6796540021896362), ('grandmother', 0.6663661599159241)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_analogies('nephew', 'niece', 'aunt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neighbors of king:\n",
+      "\tkings\n",
+      "\tqueen\n",
+      "\tmonarch\n",
+      "\tcrown_prince\n",
+      "\tprince\n",
+      "\tsultan\n",
+      "\truler\n",
+      "\tprinces\n",
+      "\tPrince_Paras\n",
+      "\tthrone\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nearest_neighbors(w):\n",
+    "    \"\"\"\n",
+    "    Given a word, what is the closest word? \n",
+    "    \"\"\"\n",
+    "    r = word_vectors.most_similar(positive = [w])\n",
+    "    print(f\"Neighbors of {w}:\")\n",
+    "    for word, score in r:\n",
+    "        print(f\"\\t{word}\")\n",
+    "    return None \n",
+    "\n",
+    "nearest_neighbors('king')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neighbors of france:\n",
+      "\tspain\n",
+      "\tfrench\n",
+      "\tgermany\n",
+      "\teurope\n",
+      "\titaly\n",
+      "\tengland\n",
+      "\teuropean\n",
+      "\tbelgium\n",
+      "\tusa\n",
+      "\tserbia\n"
+     ]
+    }
+   ],
+   "source": [
+    "nearest_neighbors('france')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neighbors of japan:\n",
+      "\tjapanese\n",
+      "\ttokyo\n",
+      "\tamerica\n",
+      "\teurope\n",
+      "\tgermany\n",
+      "\tchinese\n",
+      "\tindia\n",
+      "\thawaii\n",
+      "\tusa\n",
+      "\tkorea\n"
+     ]
+    }
+   ],
+   "source": [
+    "nearest_neighbors('japan')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neighbors of einstein:\n",
+      "\tnikki\n",
+      "\tlmfao\n",
+      "\talbert\n",
+      "\tarmstrong\n",
+      "\tjoan\n",
+      "\tbecky\n",
+      "\tmcmahon\n",
+      "\tconrad\n",
+      "\tlori\n",
+      "\thaley\n"
+     ]
+    }
+   ],
+   "source": [
+    "nearest_neighbors('einstein')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neighbors of woman:\n",
+      "\tman\n",
+      "\tgirl\n",
+      "\tteenage_girl\n",
+      "\tteenager\n",
+      "\tlady\n",
+      "\tteenaged_girl\n",
+      "\tmother\n",
+      "\tpolicewoman\n",
+      "\tboy\n",
+      "\tWoman\n"
+     ]
+    }
+   ],
+   "source": [
+    "nearest_neighbors('woman')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neighbors of uncle:\n",
+      "\tfather\n",
+      "\tnephew\n",
+      "\tbrother\n",
+      "\tgrandfather\n",
+      "\tson\n",
+      "\tcousin\n",
+      "\tgrandson\n",
+      "\taunt\n",
+      "\tuncles\n",
+      "\tyounger_brother\n"
+     ]
+    }
+   ],
+   "source": [
+    "nearest_neighbors('uncle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neighbors of february:\n",
+      "\tjanuary\n",
+      "\tapril\n",
+      "\tseptember\n",
+      "\tdecember\n",
+      "\tjuly\n",
+      "\toctober\n",
+      "\tnovember\n",
+      "\tjune\n",
+      "\tfeb\n",
+      "\tnorway\n"
+     ]
+    }
+   ],
+   "source": [
+    "nearest_neighbors('february')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can download pretrained GloVe vectors from https://nlp.stanford.edu/projects/glove"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### GloVe\n",
     "\n",
     "Global Vectors for Word Representation captures global contextual information in a text corpus by calculating a global word-word co-occurrence matrix. GloVe considers the entire corpus and creates a large matrix that can capture the co-occurrence of words within the corpus. \n",
@@ -15657,7 +16090,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data-science-ml-cpu",
    "language": "python",
    "name": "python3"
   },
@@ -15671,7 +16104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.9"
   },
   "orig_nbformat": 4
  },
